--- a/reservations.html
+++ b/reservations.html
@@ -4,8 +4,73 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Journy - Reservations</title>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
+<style>
+  
+/* General carousel and cards styles */
+.cards-row {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  gap: 20px;
+  justify-content: flex-start; 
+}
+.cards-row::-webkit-scrollbar { display: none; }
+.card {
+  min-width: 250px;
+  flex: 0 0 auto;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  background: #fff;
+  text-align: center;
+}
+.card img {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+}
+.card h3 { margin: 10px 0 5px; font-size: 1.1rem; }
+.card p { font-size: 0.9rem; color: #555; }
+.btn-small {
+  display: inline-block;
+  margin: 10px 0 15px;
+  padding: 5px 12px;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Search bar */
+.search-section {
+  text-align: center;
+  margin: 30px 0;
+}
+#searchInput {
+  padding: 10px 15px;
+  width: 90%;
+  max-width: 500px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 1rem;
+}
+
+header {
+  border-bottom: none; 
+}
+nav {
+  border-bottom: none; 
+}
+.nav-links li a {
+  border-bottom: none !important;
+}
+.nav-links li a.active {
+  border-bottom: none !important;
+}
+
+</style>
 </head>
 <body>
 <header>
@@ -22,18 +87,48 @@
 </header>
 
 <main>
+  <section class="search-section">
+    <input type="text" id="searchInput" placeholder="Search events, hotels, or restaurants...">
+  </section>
+
   <section class="featured-events">
     <h2>My Reservations</h2>
-    <div class="cards">
-      <div class="card">
-        <h3>Riyadh Music Festival</h3>
-        <p>March 15, 2026 | 2 Tickets</p>
-        <button class="btn-small">View Details</button>
+    <div class="carousel-container">
+      <div class="cards-row" id="reservations-row">
+        <div class="card"><img src="image/MDLBEAST.jpg" alt=""><h3>Riyadh Music Festival</h3><p>March 15, 2026 | 2 Tickets</p><a href="event-details.html" class="btn-small">View Details</a></div>
+        <div class="card"><img src="image/Formula.jpg" alt=""><h3>Formula 1 Grand Prix</h3><p>April 2, 2026 | 3 Tickets</p><a href="event-details.html" class="btn-small">View Details</a></div>
+        <div class="card"><img src="image/boulevardw.jpg" alt=""><h3>Boulevard World</h3><p>Dec 5-25, 2025 | Riyadh</p><a href="event-details.html" class="btn-small">View Details</a></div>
+        <div class="card"><img src="image/AlUla.png" alt=""><h3>AlUla Culture Week</h3><p>Jan 10, 2026 | AlUla</p><a href="event-details.html" class="btn-small">View Details</a></div>
+        <div class="card"><img src="image/Bujairi.png" alt=""><h3>AL-Bujairi</h3><p>July 12, 2026 | Riyadh</p><a href="event-details.html" class="btn-small">View Details</a></div>
+        <div class="card"><img src="image/Boulevardc.jpeg" alt=""><h3>Boulevard city</h3><p>Dec 18, 2025 | Jeddah</p><a href="event-details.html" class="btn-small">View Details</a></div>
       </div>
-      <div class="card">
-        <h3>Formula 1 Grand Prix</h3>
-        <p>April 2, 2026 | 3 Tickets</p>
-        <button class="btn-small">View Details</button>
+    </div>
+  </section>
+
+  <section class="featured-hotels">
+    <h2>Hotels</h2>
+    <div class="carousel-container">
+      <div class="cards-row" id="hotels-row">
+        <div class="card"><img src="image/ritz.jpg" alt=""><h3>Ritz-Carlton</h3><p>Riyadh</p><a href="event-details.html" class="btn-small">Reserve Now</a></div>
+        <div class="card"><img src="image/JeddahBeachResort.jpg" alt=""><h3>Jeddah Beach Resort</h3><p>Jeddah</p><a href="event-details.html" class="btn-small">Reserve Now</a></div>
+        <div class="card"><img src="image/AlUlaH.webp" alt=""><h3>AlUla Heritage Suites</h3><p>AlUla</p><a href="event-details.html" class="btn-small">Reserve Now</a></div>
+        <div class="card"><img src="image/FourSeasons.webp" alt=""><h3>Four Seasons</h3><p>Riyadh</p><a href="event-details.html" class="btn-small">Reserve Now</a></div>
+        <div class="card"><img src="image/Narcissus.jpg" alt=""><h3>Narcissus Hotel</h3><p>Riyadh</p><a href="event-details.html" class="btn-small">Reserve Now</a></div>
+        <div class="card"><img src="image/Fairmont.jpg" alt=""><h3>Fairmont Riyadh</h3><p>Riyadh</p><a href="event-details.html" class="btn-small">Reserve Now</a></div>
+      </div>
+    </div>
+  </section>
+
+  <section class="featured-restaurants">
+    <h2>Restaurants</h2>
+    <div class="carousel-container">
+      <div class="cards-row" id="restaurants-row">
+        <div class="card"><img src="image/TheGlobe.jpg" alt=""><h3>The Globe</h3><p>Riyadh</p><a href="event-details.html" class="btn-small">Reserve Table</a></div>
+        <div class="card"><img src="image/lazycat.webp" alt=""><h3>Lazy Cat</h3><p>Riyadh</p><a href="event-details.html" class="btn-small">Reserve Table</a></div>
+        <div class="card"><img src="image/public.jpg" alt=""><h3>Public</h3><p>Riyadh</p><a href="event-details.html" class="btn-small">Reserve Table</a></div>
+        <div class="card"><img src="image/oulu.jpg" alt=""><h3>Oulu</h3><p>Riyadh</p><a href="event-details.html" class="btn-small">Reserve Table</a></div>
+        <div class="card"><img src="image/MarayaSocial.jpg" alt=""><h3>Maraya Social</h3><p>AlUla</p><a href="event-details.html" class="btn-small">Reserve Table</a></div>
+        <div class="card"><img src="image/Suhail.jpg" alt=""><h3>Suhail Restaurant</h3><p>AlUla</p><a href="event-details.html" class="btn-small">Reserve Table</a></div>
       </div>
     </div>
   </section>
@@ -43,6 +138,50 @@
   <p>&copy; 2025 Journy. All rights reserved.</p>
 </footer>
 
-<script src="script.js"></script>
+<script>
+// ====== Auto-scroll setup ======
+let autoScrollInterval;
+
+function startAutoScroll() {
+  // Clear any existing interval
+  clearInterval(autoScrollInterval);
+
+  autoScrollInterval = setInterval(() => {
+    document.querySelectorAll('.cards-row').forEach(row => {
+      // Check if we've reached the end
+      if (row.scrollLeft + row.clientWidth >= row.scrollWidth) {
+        // If at the end, jump back to the start
+        row.scroll({ left: 0, behavior: 'instant' }); 
+      } else {
+        // Scroll slightly to the right
+        row.scrollBy({ left: 1, behavior: 'smooth' });
+      }
+    });
+  }, 20);
+}
+
+// Start auto-scroll on page load
+startAutoScroll();
+
+
+// ====== Search functionality ======
+const searchInput = document.getElementById('searchInput');
+searchInput.addEventListener('keyup', () => {
+  const filter = searchInput.value.toLowerCase();
+
+  document.querySelectorAll('.cards-row .card').forEach(card => {
+    const title = card.querySelector('h3').textContent.toLowerCase();
+    const desc = card.querySelector('p').textContent.toLowerCase();
+
+    // Show card if title or description contains search term
+    if (title.includes(filter) || desc.includes(filter)) {
+      card.style.display = 'block';
+    } else {
+      card.style.display = 'none';
+    }
+  });
+});
+</script>
+
 </body>
 </html>
