Enhance login.html with styles and validation
Added styling and validation to the login form.

Signed-off-by: Deemafrh <Demohato@gmail.com>

--- a/login.html
+++ b/login.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Journy - Login</title>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Journy - Login</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    .auth-page{min-height:70vh; display:flex; justify-content:center; align-items:center; padding:60px 20px;}
+    .auth-card{width:100%; max-width:520px; background:#fff; border-radius:10px; box-shadow:0 6px 20px rgba(0,0,0,0.1); overflow:hidden;}
+    .auth-head{padding:22px 26px; border-bottom:1px solid #eee;}
+    .auth-head h2{font-family:'Playfair Display',serif; font-size:28px; color:#333;}
+    .auth-body{padding:22px 26px; display:grid; gap:14px;}
+    .form-group{display:grid; gap:6px;}
+    .form-group label{font-weight:600; color:#333;}
+    .form-control{padding:12px 14px; border:1px solid #ddd; border-radius:8px; font-size:15px; outline:none; width:100%;}
+    .form-control:focus{border-color:#ff6b00; box-shadow:0 0 0 3px rgba(255,107,0,0.12);}
+    .error{color:#d33; font-size:13px; min-height:1em;}
+    .helper{font-size:13px; color:#777;}
+    .auth-actions{display:grid; gap:12px; margin-top:6px;}
+    .btn:disabled{opacity:.6; cursor:not-allowed;}
+    /* تفعيل لون الرابط النشط في الهيدر */
+    nav .nav-links li a.active{color:#ff6b00;}
+  </style>
 </head>
 <body>
 <header>
@@ -19,23 +36,76 @@
 </header>
 
 <main>
-  <section class="auth-section">
-    <h2>Login to Journy</h2>
-    <form>
-      <label for="email">Email:</label>
-      <input type="email" id="email" placeholder="Enter your email" required>
+  <section class="auth-page">
+    <div class="auth-card">
+      <div class="auth-head">
+        <h2>Login to Journy</h2>
+      </div>
+      <form class="auth-body" id="loginForm" novalidate>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input class="form-control" type="email" id="email" placeholder="Enter your email" autocomplete="email" required>
+          <div class="error" id="emailErr"></div>
+        </div>
 
-      <label for="password">Password:</label>
-      <input type="password" id="password" placeholder="Enter your password" required>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input class="form-control" type="password" id="password" placeholder="Enter your password" minlength="8" required>
+          <div class="error" id="passErr"></div>
+        </div>
 
-      <button type="submit" class="btn">Login</button>
-      <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
-    </form>
+        <div style="display:flex;align-items:center;gap:8px;">
+          <input type="checkbox" id="remember">
+          <label for="remember" class="helper">Remember me</label>
+        </div>
+
+        <div class="auth-actions">
+          <button type="submit" class="btn" id="loginBtn" disabled>Login</button>
+          <p class="helper">Don’t have an account? <a class="link-inline" href="signup.html" style="color:#ff6b00;">Sign Up</a></p>
+        </div>
+      </form>
+    </div>
   </section>
 </main>
 
 <footer>
   <p>&copy; 2025 Journy. All rights reserved.</p>
 </footer>
+
+<script>
+  (function(){
+    const f = document.getElementById('loginForm');
+    const emailI = document.getElementById('email');
+    const passI  = document.getElementById('password');
+    const emailErr = document.getElementById('emailErr');
+    const passErr  = document.getElementById('passErr');
+    const btn = document.getElementById('loginBtn');
+
+    function validate(){
+      let ok = true;
+      const emailRx = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+      if(!emailI.value.trim()){ emailErr.textContent='Please enter your email.'; ok=false; }
+      else if(!emailRx.test(emailI.value)){ emailErr.textContent='Invalid email format.'; ok=false; }
+      else { emailErr.textContent=''; }
+
+      if(!passI.value.trim()){ passErr.textContent='Please enter your password.'; ok=false; }
+      else if(passI.value.length<8){ passErr.textContent='Password must be at least 8 characters.'; ok=false; }
+      else { passErr.textContent=''; }
+
+      btn.disabled = !ok;
+      return ok;
+    }
+
+    [emailI, passI].forEach(el=>el.addEventListener('input', validate));
+
+    f.addEventListener('submit', e=>{
+      e.preventDefault();
+      if(!validate()) return;
+      btn.textContent='Logging in...';
+      btn.disabled = true;
+      setTimeout(()=>{ alert('Login successful (frontend demo).'); window.location.href='index.html'; },700);
+    });
+  })();
+</script>
 </body>
 </html>
