--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="hero">
     <h1>Discover Amazing Events Across Saudi Arabia</h1>
     <p>Plan your trips, book tickets, and explore local experiences effortlessly</p>
-    <a href="events.html" class="btn">Explore Events</a>
+    <a href="discover.html" class="btn">Explore Events</a>
   </div>
 </header>
 
