--- a/reservations.html
+++ b/reservations.html
@@ -78,7 +78,7 @@ nav {
     <div class="logo">Journy</div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
-      <li><a href="events.html">Events</a></li>
+      <li><a href="discover.html">Events</a></li>
       <li><a href="planner.html">Planner</a></li>
       <li><a href="reservations.html" class="active">Reservations</a></li>
       <li><a href="login.html">log out</a></li>
