--- a/event-details.html
+++ b/event-details.html
@@ -13,7 +13,7 @@
     <div class="logo">Journy</div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
-      <li><a href="events.html">Events</a></li>
+      <li><a href="discover.html">Discover</a></li>
       <li><a href="planner.html">Planner</a></li>
       <li><a href="reservations.html">Reservations</a></li>
       <li><a href="login.html">Log out</a></li>
