--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="logo">Journy</div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
-      <li><a href="discover.html">Disvover</a></li>
+      <li><a href="discover.html">Discover</a></li>
       <li><a href="planner.html">Planner</a></li>
       <li><a href="reservations.html">Reservations</a></li>
       <li><a href="login.html">log in</a></li>
